--- a/lib/assets/translations/ko-KR.json
+++ b/lib/assets/translations/ko-KR.json
@@ -62,7 +62,8 @@
         "theme": "테마",
         "dark_theme": "어두운 테마",
         "image_filter": "이미지 필터",
-        "full_screen_remove_bars": "전체 화면 상태 표시줄 제거"
+        "full_screen_remove_bars": "전체 화면 상태 표시줄 제거",
+        "enable_volume_control": "볼륨 키 제어 페이지 전환"
     },
     "theme": {
         "light": "라이트",
